unpackaged/main/default/objects/Product2/fields/SBQQ__ProductPictureID__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductPictureID__c</fullName>
    <description>ID of Document or Content record that holds the picture for this product.</description>
    <inlineHelpText>ID of Document or Content record that holds the picture for this product.</inlineHelpText>
    <label>Product Picture Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>