unpackaged/main/default/objects/Product2/fields/Search_Filter_Terms__c.field-meta.xml
<CustomField>
    <fullName>Search_Filter_Terms__c</fullName>
    <description>Used as terms to configure Product Search filters, restricting access to certain products, effectively grouping them.</description>
    <inlineHelpText>Select one or more of the following: AU (for Australia), ES (for Energy Services), MS (for Modular Solutions), WF (for Workforce Solutions), LG (for Lodging), DR (for Disaster)</inlineHelpText>
    <label>Search Filter Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>WF</fullName>
            </value>
            <value>
                <fullName>MS_NEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>