unpackaged/main/default/objects/Product2/fields/Shell__c.field-meta.xml
<CustomField>
    <fullName>Shell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes Bundled Parent with Price Rules that populate Unit Cost from Bundles Child Products</description>
    <inlineHelpText>Check if Parent of Bundled Products</inlineHelpText>
    <label>Shell</label>
    <type>Checkbox</type>
</CustomField>