unpackaged/main/default/objects/Product2/fields/Standard_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Standard_Service_Fee__c</fullName>
    <description>Standard amount charged to client for cleaning and/or servicing</description>
    <inlineHelpText>Standard amount charged to client for cleaning and/or servicing</inlineHelpText>
    <label>Standard Service Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>