unpackaged/main/default/objects/Product2/fields/Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Frequency__c</fullName>
    <label>Subscription Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Intermittent</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Once Final</fullName>
            </value>
            <value>
                <fullName>Once Initial</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>