unpackaged/main/default/objects/Product2/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <label>Transaction Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camp Operations</fullName>
            </value>
            <value>
                <fullName>Carry On</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>Dismantle</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Rental/Sale</fullName>
            </value>
            <value>
                <fullName>Rental Cost</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Sub Rental</fullName>
            </value>
            <value>
                <fullName>Sub Rental - Consumable</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>VAPS</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Upfronts</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Upfronts New</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Capital Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>