unpackaged/main/default/objects/Product2/recordTypes/Revenue_Stream.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Stream</fullName>
    <active>true</active>
    <label>Revenue Stream</label>
</RecordType>