unpackaged/main/default/objects/Product2/validationRules/SBQQ__Configurator_View_must_be_Wizard.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Configurator_View_must_be_Wizard</fullName>
    <active>false</active>
    <description>In order to use the Option Layout field, the Configurator view in Custom Settings must be set to Wizard. Otherwise, the Option Layout will default to a 'Section'.</description>
    <errorConditionFormula>AND(ISNEW(), $Setup.SBQQ__GeneralSettings__c.SBQQ__ConfiguratorView__c = 'Classic', NOT( OR(ISPICKVAL(SBQQ__OptionLayout__c, ''), ISPICKVAL(SBQQ__OptionLayout__c, 'Sections')) ))</errorConditionFormula>
    <errorMessage>In order to use the Option Layout field, the Configurator view in Custom Settings must be set to Wizard. Otherwise, the Option Layout will default to a 'Section'.</errorMessage>
</ValidationRule>