unpackaged/main/default/objects/Product2/validationRules/SBQQ__Subscription_Conversion_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Subscription_Conversion_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(SBQQ__SubscriptionConversion__c, 'One per subscribed asset') &amp;&amp; NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, 'Percent Of Total'))</errorConditionFormula>
    <errorDisplayField>SBQQ__SubscriptionConversion__c</errorDisplayField>
    <errorMessage>You can only select One per Subscribed Asset for Subscription Conversion for Percent of Total Subscriptions</errorMessage>
</ValidationRule>