unpackaged/main/default/objects/Product2/validationRules/SBQQ__Term_schedule_requires_subscription.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
    <active>false</active>
    <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, ''),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
    <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
    <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
</ValidationRule>