unpackaged/main/default/objects/Product2/validationRules/SBQQ__Validate_billing_frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Validate_billing_frequency</fullName>
    <active>false</active>
    <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, 'One-Time'), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, '')))</errorConditionFormula>
    <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
    <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
</ValidationRule>