unpackaged/main/default/objects/Product2/listViews/Active_Carry_On.listView-meta.xml
<ListView>
    <fullName>Active_Carry_On</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__Component__c</columns>
    <columns>Transaction_Category__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Carry On</value>
    </filters>
    <label>Active Carry On</label>
</ListView>