unpackaged/main/default/objects/Product2/listViews/Active_with_Pricing_Details.listView-meta.xml
<ListView>
    <fullName>Active_with_Pricing_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__CostEditable__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>Transaction_Category__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active with Pricing Details</label>
</ListView>