unpackaged/main/default/objects/Product2/listViews/Britco_Products.listView-meta.xml
<ListView>
    <fullName>Britco_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.EXTERNAL_ID</field>
        <operation>startsWith</operation>
        <value>Britco</value>
    </filters>
    <label>Britco Products</label>
</ListView>