unpackaged/main/default/objects/Product2/listViews/Insurance_Details.listView-meta.xml
<ListView>
    <fullName>Insurance_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Insurable_Value__c</columns>
    <columns>Insurance_Monthly__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Insurance Details-Active</label>
</ListView>