unpackaged/main/default/objects/Product2/listViews/Products_VAPS_Review.listView-meta.xml
<ListView>
    <fullName>Products_VAPS_Review</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Miscellaneous,Sublease,Sublease - Consumable,Sublease - Monthly</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Products - VAPS - Review</label>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>