unpackaged/main/default/objects/Product2/listViews/Sublease_Prods.listView-meta.xml
<ListView>
    <fullName>Sublease_Prods</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Transaction_Category__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Sublease,Sublease - Consumable,Sublease - Monthly</value>
    </filters>
    <label>Sublease Prods</label>
</ListView>