unpackaged/main/default/objects/Product2/listViews/VAPS.listView-meta.xml
<ListView>
    <fullName>VAPS</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__CostEditable__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>SBQQ__PricingMethodEditable__c</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>Transaction_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Subscription_Frequency__c</columns>
    <columns>SBQQ__QuantityEditable__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>VAPS</value>
    </filters>
    <filters>
        <field>NS_Activity_Code_Rental__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>VAPS Products</label>
</ListView>