unpackaged/main/default/objects/Product2/listViews/VAPS_Products_Insurance.listView-meta.xml
<ListView>
    <fullName>VAPS_Products_Insurance</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__CostEditable__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Insurable_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>VAPS</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Standard_Product</value>
    </filters>
    <label>VAPS Products - Insurance</label>
    <sharedTo>
        <group>All_BD_Users</group>
        <group>All_Vanguard</group>
        <role>Assistant_Financial_Analyst</role>
    </sharedTo>
</ListView>